Fixes iOS Facebook like button alignment

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -138,6 +138,7 @@ body
     right 5px
     bottom 16px
     z-index 4
+    width auto !important
 
 .item:not(.movie)
   display block
